# HyperGear

./: .gitignore  Cargo.toml  README.md  debug.bat  debug.ps1  release.bat  release.ps1
HyperGear/: .gitignore  package-lock.json  package.json  rollup.config.js  svelte.config.js  tailwind.config.ts  tsconfig.json
HyperGear/src/: app.postcss
HyperGear/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
HyperGear/src-tauri/icons/: icon.icns
HyperGear/src-tauri/src/: main.rs
HyperGear/src/lib/: delegate.ts  global.ts  utilis.ts
HyperGear/src/routes/: +layout.svelte  +page.svelte
common_crate/: Cargo.toml
common_crate/src/: lib.rs  log.rs  mem.rs  sys.rs  utilis.rs
gears/gear/: Cargo.toml  rust-toolchain.toml
gears/gear/src/: global.rs  hook.rs  hookimpl.rs  lib.rs  utlits.rs
