[package]
name = "HyperGear"
version = "1.0.27"
description = "HyperGear"
authors = ["PLAN T LABS"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-minimize", "window-show", "window-hide", "window-unmaximize", "window-close", "window-start-dragging", "window-unminimize", "shell-open", "devtools", "windows7-compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static ="1.4.0"
#shared_memory="0.12.4"
md5="0.7.0"

common_crate= {path="../../common_crate"}

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies.windows]
version = "0.54.0"
features = [
    #"Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
]
