[package]
name = "gear"
version = "0.1.0"
edition = "2021"


[lib]
crate-type=["cdylib"]

[dependencies]
iced-x86 = "1.21.0"
md5="0.7.0"
once_cell="1.19.0"
num-traits ="0.2.18"
goblin = "0.8.0"
winapi = { version = "0.3.9", features = ["wincon"] }
common_crate= {path="../../common_crate"}


[dependencies.windows]
version = "0.54.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    
]

